<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="glideButton">Glide - Image Loading Library by BumpTech</string>
    <string name="LoadAppButton">LoadApp - Current repository by Udacity</string>
    <string name="retrofitButton">Retrofit Type-safe client for Android and Java by Square, Inc</string>
    <string name="download_channel_id" translatable="false">Download_channel</string>
    <string name="download_channel_name" translatable="true">download</string>
    <string name="no_radio_button_selected" tools:ignore="ExtraTranslation">"You have to select one option"</string>
    <string name="filenameTitle">File name:</string>
    <string name="statusTitle">Status:</string>
    <string name="back_button_string">GO BACK</string>
</resources>
